--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1><i class="fas fa-signature"></i> Generador de Firmas Digitales</h1>
-            <p>Crea firmas profesionales para tu correo electrónico</p>
+            <p>Crea firmas profesionales para tu correo electrónico de Grupo Industrial Baca</p>
         </header>
 
         <div class="main-content">
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="mobile">Móvil (Opcional)</label>
+                        <label for="mobile">Teléfono Móvil (Opcional)</label>
                         <input type="tel" id="mobile" name="mobile" placeholder="Número móvil personal">
                     </div>
 
@@ -105,3 +105,4 @@
 </body>
 
 </html>
+
